syntax = "proto3";

package quibble.core;

option csharp_namespace = "Quibble.Common.Protos";

message EmptyMessage {
}

// Enums are prefixed as the values are part of the namespace. 
// This means that Enum1.Value1 and Enum2.Value1 will conflict.
enum QuizState {
	QuizInDevelopment = 0;
	QuizWaitingForPlayers = 1;
	QuizInProgress = 2;
	QuizClosed = 3;
}

message QuizInfo {
	string id = 1;
	string ownerId = 2;
	string title = 3;
	QuizState state = 4;
}

message QuizFull {
	QuizInfo info = 1;
	repeated RoundFull rounds = 2;
}

enum RoundState {
	RoundHidden = 0;
	RoundAvailable = 1;
}

message RoundInfo {
	string id = 1;
	string quizId = 2;
	string title = 3;
	RoundState state = 4;
}

message RoundFull {
	RoundInfo info = 1;
	repeated QuestionInfo questions = 2;
}

enum QuestionState {
	QuestionHidden = 0;
	QuestionAvailable = 1;
	QuestionLocked = 2;
	QuestionReleased = 3;
}

message QuestionInfo {
	string id = 1;
	string roundId = 2;
	string body = 3;
	string answer = 4;
	QuestionState state = 5;
}

message EntityRequest {
	string id = 1;
}